--- a/src/variables.scss
+++ b/src/variables.scss
@@ -54,3 +54,7 @@ $theme-map-dark: (
   --footer-height: 200px,
   --input-disabled-solid-color: #949494,
 );
+
+:root {
+  --sp-search-box-z: 1000;
+}
