--- a/src/variables.scss
+++ b/src/variables.scss
@@ -21,7 +21,7 @@ $theme-map-light: (
   --sp-blue: #5b8e7d,
   --sp-yellow: #f4e285,
   --sp-orange: #f4a259,
-  --sp-red: #bc4b51,
+  --sp-red: hsl(357, 46%, 52%),
   --sp-primary: var(--sp-blue),
   --sp-accent: var(--sp-red),
   --sp-error: var(--sp-red),
